# NifTK

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTORS.txt  CTestConfig.cmake  INSTALLATION.txt  LICENSE.txt  NifTKConfig.cmake.in  NifTKConfigure.h.in  README.md  README.txt
Applications/: CMakeLists.txt  README.txt  niftkCTEAcosta2009Subsampling.cxx  niftkCTEMaskedSmoothing.cxx  niftkConvertToMidasStr.cxx  niftkErode.cxx  niftkImageMomentsRegistration.cxx  niftkMakeLapUSProbeAprilTagsVisualisation.cxx  niftkN4BiasFieldCorrection.cxx  niftkResetDirectionField.cxx  niftkSTAPLE.cxx  niftkSwapIntensity.cxx  niftkThinPlateSplineScatteredDataPointSetToImage.xml.in  niftkVTKIterativeClosestPointRegister.cxx
Applications/2DImagesTo3DVolume/: CMakeLists.txt  niftk2DImagesTo3DVolume.cxx
Applications/AbsImageFilter/: CMakeLists.txt  niftkAbsImageFilter.cxx
Applications/Add/: CMakeLists.txt  niftkAdd.cxx  niftkAdd.xml.in
Applications/AddBorderToImage/: CMakeLists.txt  niftkAddBorderToImage.cxx  niftkAddBorderToImage.xml.in
Applications/Affine/: CMakeLists.txt  niftkAffine.cxx
Applications/And/: CMakeLists.txt  niftkAnd.cxx
Applications/AnonymiseDICOMImages/: CMakeLists.txt  niftkAnonymiseDICOMImages.cxx  niftkAnonymiseDICOMImages.xml.in
Applications/AnonymiseDICOMMammograms/: CMakeLists.txt  niftkAnonymiseDICOMMammograms.cxx  niftkAnonymiseDICOMMammograms.xml.in
Applications/ApplyMaskToImage/: CMakeLists.txt  niftkApplyMaskToImage.cxx  niftkApplyMaskToImage.xml.in
Applications/AtlasStatistics/: CMakeLists.txt  niftkAtlasStatistics.cxx
Applications/Average/: CMakeLists.txt  niftkAverage.cxx
Applications/BSI/: CMakeLists.txt  niftkBSI.cxx
Applications/BackProject2Dto3D/: CMakeLists.txt  niftkBackProject2Dto3D.cxx
Applications/BasicImageFeatures/: CMakeLists.txt  niftkBasicImageFeatures.cxx
Applications/BasicImageFeatures3D/: CMakeLists.txt  niftkBasicImageFeatures3D.cxx
Applications/BilateralImageFilter/: CMakeLists.txt  niftkBilateralImageFilter.cxx
Applications/BinaryShapeBasedSuperSamplingFilter/: CMakeLists.txt  niftkBinaryShapeBasedSuperSamplingFilter.cxx
Applications/BlockMatching/: CMakeLists.txt  niftkBlockMatching.cxx
Applications/BreastDCEandADC/: CMakeLists.txt  niftkBreastDCEandADC.cxx
Applications/BreastDensityCalculationFromMRI/: CMakeLists.txt  niftkBreastDensityCalculationFromMRI.cxx
Applications/BreastDensityCalculationGivenMRISegmentation/: CMakeLists.txt  niftkBreastDensityCalculationGivenMRISegmentation.xml.in
Applications/BreastDensityFromMRIs/: CMakeLists.txt  niftkBreastDensityFromMRIs.cxx
Applications/BreastDensityFromMRIsGivenMaskAndImage/: CMakeLists.txt  niftkBreastDensityFromMRIsGivenMaskAndImage.cxx
Applications/BreastDicomSeriesReadImageWrite/: CMakeLists.txt  niftkBreastDicomSeriesReadImageWrite.cxx
Applications/BreastMaskSegmentationFromMRI/: CMakeLists.txt  niftkBreastMaskSegmentationFromMRI.cxx  niftkBreastMaskSegmentationFromMRI_xml.h
Applications/CTEAcosta2009Subsampling/: CMakeLists.txt  niftkCTEAcosta2009Subsampling.cxx
Applications/CTEAssignAtlasValues/: CMakeLists.txt  niftkCTEAssignAtlasValues.cxx
Applications/CTEBourgeat2008/: CMakeLists.txt  niftkCTEBourgeat2008.cxx
Applications/CTEDas2009/: CMakeLists.txt  niftkCTEDas2009.cxx
Applications/CTEExtractGMWMBoundaryFromLabelImage/: CMakeLists.txt  niftkCTEExtractGMWMBoundaryFromLabelImage.cxx
Applications/CTEHighRes/: CMakeLists.txt  niftkCTEHighRes.cxx
Applications/CTEHuttonLayering/: CMakeLists.txt  niftkCTEHuttonLayering.cxx
Applications/CTEJones2000/: CMakeLists.txt  niftkCTEJones2000.cxx
Applications/CTEMaskedSmoothing/: CMakeLists.txt  niftkCTEMaskedSmoothing.cxx
Applications/CTEPrepareVolumes/: CMakeLists.txt  niftkCTEPrepareVolumes.cxx
Applications/CTEYezzi2003/: CMakeLists.txt  niftkCTEYezzi2003.cxx
Applications/CUDAInfo/: CMakeLists.txt  niftkCUDAInfo.cxx
Applications/CombineSegmentations/: CMakeLists.txt  niftkCombineSegmentations.cxx
Applications/ComposeITKAffineTransformations/: CMakeLists.txt  niftkComposeITKAffineTransformations.cxx
Applications/ComputeImageHistogram/: CMakeLists.txt  niftkComputeImageHistogram.cxx
Applications/ComputeJointHistogram/: CMakeLists.txt  niftkComputeJointHistogram.cxx
Applications/ComputeMeanTransformation/: CMakeLists.txt  niftkComputeMeanTransformation.cxx
Applications/ConnectedComponents/: CMakeLists.txt  niftkConnectedComponents.cxx
Applications/ContourExtractor2DImageFilter/: CMakeLists.txt  niftkContourExtractor2DImageFilter.cxx
Applications/ConvertDofToNiftiReg/: CMakeLists.txt  niftkConvertDofToNiftiReg.cxx
Applications/ConvertImage/: CMakeLists.txt  niftkConvertImage.cxx  niftkConvertImage.xml.in
Applications/ConvertImageToDICOM/: CMakeLists.txt  niftkConvertImageToDICOM.cxx  niftkConvertImageToDICOM.xml.in
Applications/ConvertImageToVTKStructuredGrid/: CMakeLists.txt  niftkConvertImageToVTKStructuredGrid.cxx
Applications/ConvertMidasStrToNii/: CMakeLists.txt  niftkConvertMidasStrToNii.cxx
Applications/ConvertNiftiVectorImage/: CMakeLists.txt  niftkConvertNiftiVectorImage.cxx
Applications/ConvertPLYtoVTK/: CMakeLists.txt  niftkConvertPLYtoVTK.cxx
Applications/ConvertRawDICOMMammogramsToPresentation/: CMakeLists.txt  niftkConvertRawDICOMMammogramsToPresentation.cxx
Code/: CMakeLists.txt
Prototype/: CMakeLists.txt  README.txt
Testing/: CMakeLists.txt
Utilities/: CMakeLists.txt  CheckLibraryPath.sh  CheckUnMergedBranches.sh  GenerateCommandLineDoxygen.sh.in  GenerateTestingReports.sh.in  MakeMacDMG.sh  NifTKContinuousBuild.bat  NifTKContinuousTest.bat  NifTKReleaseBuild.bat  NifTKReleaseDeploy.bat  NifTKRunDoxygen.sh  NifTKUnixBuild.sh  SetSubversionProperties.sh  SetupNifTK.csh.in  SetupNifTK.sh.in  UnixBuild.sh  build-niftk.sh  cgal-vtk6.diff  copy_exe_nightly.bat  copy_exe_weekly.bat  copy_executable.bat  doAutomatedBuild.bat  doNightly_release.bat  download-tarball.sh  fix-include-statements.sh  make-icns.sh  migrate.sh  niftk-ep-clean-up.sh  niftk-ep-clean.sh  niftkFixIncludeGuards.cxx  regenerate-cl-apps-cmake-files.sh
(+9499 files in other folders)
