#/*============================================================================
#
#  NifTK: A software platform for medical image computing.
#
#  Copyright (c) University College London (UCL). All rights reserved.
#
#  This software is distributed WITHOUT ANY WARRANTY; without even
#  the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
#  PURPOSE.
#
#  See LICENSE.txt in the top level directory for details.
#
#============================================================================*/

find_package(VTK REQUIRED
  COMPONENTS
    vtkCommonCore
    vtkCommonExecutionModel
    vtkCommonMisc
    vtkFiltersCore
    vtkFiltersGeneral
    vtkFiltersSources
    vtkInteractionStyle
    vtkIOCore
    vtkIOImage
    vtkIOLegacy
    vtkIOPLY
    vtkRenderingCore
    vtkRenderingFreeType
    vtkRenderingFreeTypeOpenGL
    vtkRenderingOpenGL
  NO_MODULE
)

if(VTK_FOUND)
  include(${VTK_USE_FILE})
endif(VTK_FOUND)

set(ITK_NO_IO_FACTORY_REGISTER_MANAGER 0)
include(${MITK_MODULES_PACKAGE_DEPENDS_DIR}/MITK_ITK_Config.cmake)

find_package(CUDA)

set(_applications
  2DImagesTo3DVolume
  AbsImageFilter
  Add
  AddBorderToImage
  Affine
  And
  AnonymiseDICOMImages
  AnonymiseDICOMMammograms
  ApplyMaskToImage
  AtlasStatistics
  Average
  BSI
  BackProject2Dto3D
  BasicImageFeatures
  BasicImageFeatures3D
  BilateralImageFilter
  BinaryShapeBasedSuperSamplingFilter
  BlockMatching
  BreastDCEandADC
  BreastDensityCalculationFromMRI
  BreastDensityFromMRIs
  BreastDensityFromMRIsGivenMaskAndImage
  BreastDicomSeriesReadImageWrite
  BreastMaskSegmentationFromMRI
  CTEAcosta2009Subsampling
  CTEAssignAtlasValues
  CTEBourgeat2008
  CTEDas2009
  CTEExtractGMWMBoundaryFromLabelImage
  CTEHighRes
  CTEHuttonLayering
  CTEJones2000
  CTEMaskedSmoothing
  CTEPrepareVolumes
  CTEYezzi2003
  CUDAInfo
  CombineSegmentations
  ComposeITKAffineTransformations
  ComputeImageHistogram
  ComputeJointHistogram
  ComputeMeanTransformation
  ConnectedComponents
  ConvertImage
  ConvertImageToDICOM
  ConvertImageToVTKStructuredGrid
  ConvertMidasStrToNii
  ConvertNiftiVectorImage
  ConvertPLYtoVTK
  ConvertRawDICOMMammogramsToPresentation
  ConvertToMidasStr
  ConvertTransformToRIREFormat
  CreateAffineTransform
  CreateAffineTransform2D
  CreateMaskFromLabels
  CreateMaskImage
  CreateTransformation
  CropImage
  CurveFitRegistration
  DecimatePolyData
  DecomposeAffineMatrix
  DeformationFieldTargetRegistrationError
  Denoise
  DicomSeriesReadImageWrite
  Dilate
  DilateMaskAndCrop
  DistanceTransform
  DoubleWindowBSI
  DynamicContrastEnhancementAnalysis
  EVFFCECT
  ElasticBodySplineWarp
  Erode
  ExportDICOMTagsToCSVFile
  Extract2DSliceFrom3DImage
  ExtractCurvatures
  ExtractRegion
  ExtractScalp
  ExtractZeroCrossing
  ExtrudeMaskToVolume
  FillHoles
  ForwardAndBackProjectionDifferenceFilter
  ForwardProject3Dto2D
  Gaussian
  GetMetricValue
  GradientVectorField
  HistogramEqualization
  HistogramMatchingImageFilter
  ITKAffineResampleImage
  ImageInfo
  ImageMomentsRegistration
  ImageReconstruction
  Inject
  InvertAffineTransform
  InvertImage
  InvertTransformation
  JacobianStatistics
  KMeansWindowBSI
  KMeansWindowLinRegNormBSI
  KNDoubleWindowBSI
  KmeansClassifier
  LandmarkBasedRegistration
  LinearSubdivisionPolyDataFilter
  LogInvertImage
  MTPDbc
  MakeLapUSProbeAprilTagsVisualisation
  MammogramCharacteristics
  MammogramFatSubtraction
  MammogramMaskSegmentation
  MammogramPectoralisSegmentation
  MammographicTumourDistribution
  MapVolumeDataToPolyDataVertices
  MarchingCubes
  MaskDICOMMammograms
  MeshFromLabels
  MultiScaleHessianImageEnhancement2D
  MultiScaleHessianImageEnhancement3D
  Multiply
  MultiplyTransformation
  N4BiasFieldCorrection
  NegateImage
  OCTVolumeConstructor
  OtsuThresholdImage
  PadImage
  PrintDICOMSeries
  ProjectionGeometry
  RegionalMammographicDensity
  ReorientateImage
  Rescale
  RescaleImageUsingHistogramPercentiles
  ResetDirectionField
  ResetVoxelDimensionsField
  STAPLE
  SampleImage
  ScalarConnectedComponentImageFilter
  SegmentForegroundFromBackground
  SegmentationStatistics
  SeriesReadVolumeWrite
  SetBorderPixel
  ShiftProb
  ShiftScale
  ShrinkImage
  SmoothPolyData
  SplitVolumeIntoVoxelPlanes
  SubsampleImage
  Subtract
  SubtractSliceFromVolume
  SwapIntensity
  TestCompareImage
  TestImage
  ThinPlateSplineScatteredDataPointSetToImage
  ThinPlateSplineWarp
  Threshold
  TransformPoint3Dto2D
  TransformPolyData
  Transformation
  UnaryImageOperatorsOnDirectoryTree
  VTKDistanceToSurface
  VTKIterativeClosestPointRegister
  VTKRandomTransform
  VesselExtractor
  VolToFreeSurfer
  VotingBinaryIterativeHoleFillingImageFilter
  VoxelWiseMaximumIntensities
)

if(BUILD_COMMAND_LINE_PROGRAMS)
  foreach(app ${_applications})
    add_subdirectory(${app})
  endforeach()
endif()

set(_legacy_applications
  ContourExtractor2DImageFilter
  ConvertDofToNiftiReg
  CreateBreastMesh
  Dbc
  FFD
  KMeansWindowPiecewiseNormBSI
  MakeLapUSProbeARUCOModel
  MakeLapUSProbeBasicModel
  MakeLapUSProbeCheckerboardMarker
  SimpleBoundaryShiftIntegral
  TomosynthesisGeometry
)

if(BUILD_LEGACY_COMMAND_LINE_PROGRAMS)
  foreach(app ${_legacy_applications})
    add_subdirectory(${app})
  endforeach()
endif()
